--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "flowbite": "^1.8.1",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2"
   }
