--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
+    "@tanstack/vue-table": "^8.10.7",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.3",
