--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.3.2",
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
     "@tanstack/vue-table": "^8.10.7",
