--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/vue-table": "^8.10.7",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.7",
+    "resend": "^2.0.0",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "vue-json-viewer": "^3.0.4"
