--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@pinia/nuxt": "^0.5.1",
     "@popperjs/core": "^2.11.8",
     "@tanstack/vue-table": "^8.10.7",
+    "apexcharts": "^3.45.1",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.7",
     "resend": "^2.0.0",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
-    "vue-json-viewer": "^3.0.4"
+    "vue-json-viewer": "^3.0.4",
+    "vue3-apexcharts": "^1.4.4"
   }
 }
